--- a/7/marionette/genji_noguchi/public/index.html
+++ b/7/marionette/genji_noguchi/public/index.html
@@ -5,7 +5,6 @@
 		<script src="js/libs/lodash.js"></script>
 		<script src="js/libs/backbone.js"></script>
 		<script src="js/libs/backbone.marionette.min.js"></script>
-		<script src="js/main.js"></script>
 		<link rel="stylesheet" href="js/libs/bootstrap/css/bootstrap.min.css">
 
 	</head>
@@ -47,13 +46,14 @@
 
 		<script src="./js/main.js"></script>
 		<script src="./js/models/project.js"></script>
+		<script src="./js/models/portfolio.js"></script>
 		<script src="./js/controllers/main_controller.js"></script>
 		<script src="./js/views/home_view.js"></script>
-		<script src="./js/views/portfolio_view.js"></script>
-		<script src="./js/views/project_view.js"></script>
 		<script src="./js/views/static_view.js"></script>
+		<script src="./js/views/project_view.js"></script>
+		<script src="./js/views/portfolio_view.js"></script>
 		<script src="./js/router.js"></script>
-		<script src="./js/starter.js"></script>
+		<script src="./js/initialize.js"></script>
 		
 	</body>
 </html>
